--- a/ClassNote/src/app/components/home-admin/disciplina-components/disciplinas/disciplinas.component.html
+++ b/ClassNote/src/app/components/home-admin/disciplina-components/disciplinas/disciplinas.component.html
@@ -6,7 +6,7 @@
       </ion-col>
     </ion-row>
     <div class="table-container ion-padding">
-      <table id="tabela_users" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <table id="tabela_disciplinas" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
         <ng-container matColumnDef="edit_create">
           <th mat-header-cell *matHeaderCellDef> </th>
