--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -19,19 +19,19 @@
       <ion-list-header mode="ios">
         <ion-label>Gerenciamento</ion-label>
       </ion-list-header>
-      <ion-item routerLinkActive="menu-item-active" routerLink="inicio" class="ion-color-primary">
+      <ion-item routerLinkActive="menu-item-active" (click)="ativarMenu()" routerLink="inicio" class="ion-color-primary">
         <ion-label>Início</ion-label>
         <ion-icon name="home"></ion-icon>
       </ion-item>
-      <ion-item routerLinkActive="menu-item-active" routerLink="turmas">
+      <ion-item routerLinkActive="menu-item-active" (click)="ativarMenu()" routerLink="turmas">
         <ion-label>Turmas</ion-label>
         <ion-icon name="people"></ion-icon>
       </ion-item>
-      <ion-item routerLinkActive="menu-item-active" routerLink="disciplinas">
+      <ion-item routerLinkActive="menu-item-active" (click)="ativarMenu()" routerLink="disciplinas">
         <ion-label>Disciplinas</ion-label>
         <ion-icon name="book"></ion-icon>
       </ion-item>
-      <ion-item routerLinkActive="menu-item-active" routerLink="usuarios">
+      <ion-item routerLinkActive="menu-item-active" (click)="ativarMenu()" routerLink="usuarios">
         <ion-label>Usuários</ion-label>
         <ion-icon name="people-circle"></ion-icon>
       </ion-item>
