--- a/ClassNote/src/app/components/home-admin/turma-components/aulas/aulas.component.html
+++ b/ClassNote/src/app/components/home-admin/turma-components/aulas/aulas.component.html
@@ -1,6 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title class="ion-text-center">{{ nome_turma }} - {{ ensino }}</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="back()">
+        <ion-icon style="position: relative;" slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title class="ion-text-center">{{nome_turma}} - {{ensino}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
