--- a/ClassNote/src/app/components/home-admin/usuario-components/form-edit-usuario/form-edit-usuario.component.html
+++ b/ClassNote/src/app/components/home-admin/usuario-components/form-edit-usuario/form-edit-usuario.component.html
@@ -57,7 +57,7 @@
           <mat-radio-group formControlName="role" style="width: 60%; text-align: justify;"
             aria-label="Selecione uma opção">
             <mat-radio-button value="admin">Admin</mat-radio-button>
-            <mat-radio-button value="teacher">Professor</mat-radio-button>
+            <mat-radio-button value="professor">Professor</mat-radio-button>
             <mat-radio-button value="monitor">Monitor</mat-radio-button>
           </mat-radio-group>
 
