--- a/ClassNote/src/app/components/side-menu/side-menu.component.html
+++ b/ClassNote/src/app/components/side-menu/side-menu.component.html
@@ -1,4 +1,4 @@
-<ion-menu side="start" contentId="main-content">
+<ion-menu *ngIf="exibirMenu" side="start" contentId="main-content">
   <ion-header>
     <ion-toolbar color="primary">
       <ion-row>
