--- a/ClassNote/src/app/pages/monitor/monitor-aulas/monitor-aulas.page.html
+++ b/ClassNote/src/app/pages/monitor/monitor-aulas/monitor-aulas.page.html
@@ -14,7 +14,7 @@
         style="display: flex; justify-content: end;"></app-calendar>
     </div>
     <div *ngFor="let aula of aulas">
-      <ion-item (click)="selectAula(aula.id_aula, aula.num_aula, nome_turma)" style="cursor: pointer;">
+      <ion-item style="cursor: pointer;">
         <ion-card style="width: 100%;">
           <ion-card-header color="light" style="opacity: 0.3;">
             <ion-row>
