--- a/ClassNote/src/app/components/teacher/new-form-aula/new-form-aula.component.html
+++ b/ClassNote/src/app/components/teacher/new-form-aula/new-form-aula.component.html
@@ -27,7 +27,7 @@
         </mat-form-field>
       </ion-item>
 
-      <ion-item *ngIf="usuario.role == 'teacher'">
+      <ion-item *ngIf="usuario.role == 'professor'">
         <ion-icon name="person" slot="start"></ion-icon>
         <mat-form-field style="opacity: 0.6;" appearance="fill">
           <mat-label>Professor</mat-label>
