--- a/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
+++ b/ClassNote/src/app/pages/admin/home-admin/home-admin.page.html
@@ -6,7 +6,7 @@
 
 
     <ion-col class="column column-fixed"
-      style="margin: -5px; border-right: 4px solid var(--ion-color-primary); background-color: #fff;"
+      style="margin: -5px; border-right: 8px solid #b3b3b3; background-color: #fff;"
       *ngIf="!exibirMenu" size="4">
       <!-- a -->
 
