--- a/ClassNote/src/app/pages/monitor/monitor-aulas/monitor-aulas.page.html
+++ b/ClassNote/src/app/pages/monitor/monitor-aulas/monitor-aulas.page.html
@@ -1,7 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-
+      <ion-button (click)="goBack()">
+        <ion-icon style="position: relative;" slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title class="ion-text-center">{{nome_turma}} - {{ensino}}</ion-title>
   </ion-toolbar>
