--- a/ClassNote/src/app/pages/monitor/monitor-aulas/monitor-aulas.page.html
+++ b/ClassNote/src/app/pages/monitor/monitor-aulas/monitor-aulas.page.html
@@ -10,14 +10,15 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list lines="none">
     <div>
       <app-calendar class="ion-margin" (dataEvent)="receiveDataFromCalendar($event)"
         style="display: flex; justify-content: end;"></app-calendar>
     </div>
     <div *ngFor="let aula of aulas">
-      <ion-item style="cursor: pointer;">
-        <ion-card style="width: 100%;">
+      <ion-item>
+        <ion-card (click)="open_print_modal(aula)" style="width: 100%; cursor: pointer;"
+          [ngClass]="{'aula_nao_cadastrada': !aula.id_aula}">
           <ion-card-header color="light" style="opacity: 0.3;">
             <ion-row>
               <ion-col class="ion-text-start">
