--- a/ClassNote/src/app/components/home-admin/turma-components/aulas/aulas.component.html
+++ b/ClassNote/src/app/components/home-admin/turma-components/aulas/aulas.component.html
@@ -17,7 +17,7 @@
     </div>
     <div *ngFor="let aula of aulas">
       <ion-item (click)="selectAula(aula.id_aula, aula.num_aula, nome_turma)" style="cursor: pointer;">
-        <ion-card style="width: 100%;">
+        <ion-card style="width: 100%; cursor: pointer;" [ngClass]="{'aula_nao_cadastrada': !aula.id_aula}">
           <ion-card-header color="light" style="opacity: 0.3;">
             <ion-row>
               <ion-col class="ion-text-start">
