--- a/ClassNote/src/app/pages/professor/turma-aulas/turma-aulas.page.html
+++ b/ClassNote/src/app/pages/professor/turma-aulas/turma-aulas.page.html
@@ -16,7 +16,7 @@
         style="display: flex; justify-content: end;"></app-calendar>
     </div>
     <div *ngFor="let aula of aulas">
-      <ion-item (click)="selectAula(aula.id_aula, aula.num_aula, nome_turma)" style="cursor: pointer;">
+      <ion-item (click)="selectAula(aula.id_aula, aula.num_aula, nome_turma, aula.fk_id_usuario)" style="cursor: pointer;">
         <ion-card style="width: 100%; cursor: pointer;" [ngClass]="{'aula_nao_cadastrada': !aula.id_aula}">
           <ion-card-header color="light" style="opacity: 0.3;">
             <ion-row>
